# router/router.go
@@ -51,6 +51,7 @@ func LoadRouter() *gin.Engine {
 	apiv1.GET("/Schedule/GetAll", GetAllSchedule)
 	apiv1.POST("/Schedule/Create",CreateSchedule)
 	apiv1.DELETE("/Schedule/Delete/:id",DeleteSchedule)
+	apiv1.PUT("/Schedule/Update",UpdateSchedule)
 
 	return router
 }
